--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactsBackupHistory/View/View/ContactsBackupHistoryView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactsBackupHistory/View/View/ContactsBackupHistoryView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,7 +26,7 @@
                 <view alpha="0.90000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zZb-K9-hPU">
                     <rect key="frame" x="0.0" y="44" width="414" height="92"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="contact_buckup_header" translatesAutoresizingMaskIntoConstraints="NO" id="7QK-Jx-lcW">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconBackupCheck" translatesAutoresizingMaskIntoConstraints="NO" id="7QK-Jx-lcW">
                             <rect key="frame" x="16" y="20" width="33" height="24"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="33" id="RIt-dm-qbB"/>
@@ -116,9 +116,9 @@
         </view>
     </objects>
     <resources>
-        <image name="contact_buckup_header" width="34" height="26"/>
+        <image name="iconBackupCheck" width="28" height="24"/>
         <namedColor name="lrBrownishGrey">
-            <color red="0.37254899740219116" green="0.37254899740219116" blue="0.37254899740219116" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.37299999594688416" green="0.37299999594688416" blue="0.37299999594688416" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
