--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/MainScreen/Views/Cards/ContactSyncBigCardView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/MainScreen/Views/Cards/ContactSyncBigCardView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -50,7 +50,7 @@
                                 <action selector="didTouchSeeContacts:" destination="iN0-l3-epB" eventType="touchUpInside" id="cIb-sq-xDo"/>
                             </connections>
                         </button>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_arrow_down" translatesAutoresizingMaskIntoConstraints="NO" id="4km-Pn-fa4">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconArrowDownSmall" translatesAutoresizingMaskIntoConstraints="NO" id="4km-Pn-fa4">
                             <rect key="frame" x="343" y="42.000000000000014" width="16" height="16"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="16" id="Jgb-aP-ahb"/>
@@ -123,7 +123,7 @@
         </view>
     </objects>
     <resources>
-        <image name="ic_arrow_down" width="24" height="24"/>
+        <image name="iconArrowDownSmall" width="24" height="24"/>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
