--- a/Depo/Depo/Presentation/UserStories/CreateStory/CreateStoryPreviy/View/CreateStoryPreviewViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/CreateStory/CreateStoryPreviy/View/CreateStoryPreviewViewController.xib
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20037"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateStoryPreviewViewController">
             <connections>
-                <outlet property="previewImageView" destination="kfb-Fu-faN" id="rhg-D1-wxf"/>
                 <outlet property="view" destination="iN0-l3-epB" id="iUn-lP-5AT"/>
                 <outlet property="viewForPlayer" destination="Qgc-vk-FTs" id="QA6-MP-oiU"/>
             </connections>
@@ -21,47 +19,26 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qgc-vk-FTs">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                    <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kfb-Fu-faN">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HK3-XY-wZo">
-                            <rect key="frame" x="157.5" y="303.5" width="60" height="60"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="60" id="2q5-2H-rxx"/>
-                                <constraint firstAttribute="height" constant="60" id="hlL-uG-BhI"/>
-                            </constraints>
-                            <state key="normal" image="playVideo"/>
-                            <connections>
-                                <action selector="onPlayButton" destination="-1" eventType="touchUpInside" id="chM-0w-ie8"/>
-                            </connections>
-                        </button>
-                    </subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qgc-vk-FTs" userLabel="VideoPlayer" customClass="CustomAVPlayerLayer" customModule="Billo" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="100" width="375" height="375"/>
                     <color key="backgroundColor" red="0.18431372549019609" green="0.18431372549019609" blue="0.18431372549019609" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="kfb-Fu-faN" secondAttribute="bottom" id="1ya-uN-EZb"/>
-                        <constraint firstItem="HK3-XY-wZo" firstAttribute="centerY" secondItem="Qgc-vk-FTs" secondAttribute="centerY" id="Auk-N9-nTg"/>
-                        <constraint firstItem="kfb-Fu-faN" firstAttribute="top" secondItem="Qgc-vk-FTs" secondAttribute="top" id="GAg-vd-BuD"/>
-                        <constraint firstItem="HK3-XY-wZo" firstAttribute="centerX" secondItem="Qgc-vk-FTs" secondAttribute="centerX" id="Lb2-Qs-Vp5"/>
-                        <constraint firstItem="kfb-Fu-faN" firstAttribute="leading" secondItem="Qgc-vk-FTs" secondAttribute="leading" id="UbW-Gi-hgD"/>
-                        <constraint firstAttribute="trailing" secondItem="kfb-Fu-faN" secondAttribute="trailing" id="jlO-bp-4Do"/>
+                        <constraint firstAttribute="height" constant="375" id="ULG-Vr-sUm"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" name="darkBackground"/>
             <constraints>
+                <constraint firstItem="Qgc-vk-FTs" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="100" id="FBR-Gg-UOV"/>
                 <constraint firstItem="Qgc-vk-FTs" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Jk4-hT-2Yn"/>
                 <constraint firstAttribute="trailing" secondItem="Qgc-vk-FTs" secondAttribute="trailing" id="RWc-aQ-qlJ"/>
-                <constraint firstAttribute="bottom" secondItem="Qgc-vk-FTs" secondAttribute="bottom" id="klW-aj-6LU"/>
-                <constraint firstItem="Qgc-vk-FTs" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="q2E-AQ-Yya"/>
             </constraints>
             <point key="canvasLocation" x="303" y="48"/>
         </view>
     </objects>
     <resources>
-        <image name="playVideo" width="32" height="32"/>
+        <namedColor name="darkBackground">
+            <color red="0.058823529411764705" green="0.058823529411764705" blue="0.058823529411764705" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
