--- a/Depo/Depo/Presentation/UserStories/Spotify/ImportPlaylists/SpotifyPlaylistsViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Spotify/ImportPlaylists/SpotifyPlaylistsViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -92,7 +92,7 @@
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="274-sj-MZH">
                     <rect key="frame" x="16" y="277.5" width="343" height="112"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ImageNoMusics" translatesAutoresizingMaskIntoConstraints="NO" id="Nj1-zr-Yge">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="popupHeadPhone" translatesAutoresizingMaskIntoConstraints="NO" id="Nj1-zr-Yge">
                             <rect key="frame" x="123.5" y="0.0" width="96" height="96"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="96" id="Bfv-iw-OeV"/>
@@ -140,8 +140,8 @@
         </view>
     </objects>
     <resources>
-        <image name="ImageNoMusics" width="96" height="72"/>
         <image name="import_success_back" width="375" height="155"/>
+        <image name="popupHeadPhone" width="150" height="150"/>
         <image name="spotify_checkmark" width="57" height="41"/>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
