--- a/Depo/Depo/Presentation/UserStories/Grid/HiddenPhotos/Subviews/AlbumCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Grid/HiddenPhotos/Subviews/AlbumCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,10 +12,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AlbumCell" id="Qtq-a1-yZo" customClass="AlbumCell" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="129" height="170"/>
+            <rect key="frame" x="0.0" y="0.0" width="129" height="157"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="129" height="170"/>
+                <rect key="frame" x="0.0" y="0.0" width="129" height="157"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="chQ-bu-QOK">
@@ -44,9 +44,9 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QLc-JB-eU4">
-                        <rect key="frame" x="0.0" y="129" width="129" height="20.5"/>
+                        <rect key="frame" x="0.0" y="129" width="129" height="28"/>
                         <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="eTw-vn-dfI"/>
+                            <constraint firstAttribute="height" constant="28" id="eTw-vn-dfI"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -59,20 +59,20 @@
             <constraints>
                 <constraint firstItem="chQ-bu-QOK" firstAttribute="top" secondItem="Qtq-a1-yZo" secondAttribute="top" constant="1" id="34a-nN-aa4"/>
                 <constraint firstAttribute="trailing" secondItem="QLc-JB-eU4" secondAttribute="trailing" id="90Q-8K-baZ"/>
+                <constraint firstAttribute="bottom" secondItem="QLc-JB-eU4" secondAttribute="bottom" id="H4h-r0-6cg"/>
                 <constraint firstItem="QLc-JB-eU4" firstAttribute="top" secondItem="chQ-bu-QOK" secondAttribute="bottom" constant="1" id="Lgl-mv-kf9"/>
                 <constraint firstItem="chQ-bu-QOK" firstAttribute="leading" secondItem="Qtq-a1-yZo" secondAttribute="leading" constant="1" id="TZb-0o-7e4"/>
                 <constraint firstItem="QLc-JB-eU4" firstAttribute="leading" secondItem="Qtq-a1-yZo" secondAttribute="leading" id="XoK-co-D7c"/>
-                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="QLc-JB-eU4" secondAttribute="bottom" id="m0F-WR-MBK"/>
                 <constraint firstAttribute="trailing" secondItem="chQ-bu-QOK" secondAttribute="trailing" constant="1" id="z8f-YY-T8E"/>
             </constraints>
-            <size key="customSize" width="167" height="244"/>
+            <size key="customSize" width="167" height="231"/>
             <connections>
                 <outlet property="selectionIcon" destination="6vk-6n-qQs" id="MVP-bA-ItP"/>
                 <outlet property="thumbnail" destination="871-ba-0El" id="wqv-3D-3YR"/>
                 <outlet property="thumbnailsContainer" destination="chQ-bu-QOK" id="Cgm-rj-Hgb"/>
                 <outlet property="titleLabel" destination="QLc-JB-eU4" id="UbC-Vm-hr2"/>
             </connections>
-            <point key="canvasLocation" x="-88" y="125"/>
+            <point key="canvasLocation" x="-89.130434782608702" y="112.83482142857142"/>
         </collectionViewCell>
     </objects>
     <resources>
